Some Json utilities. Default console based certificate prompt.